# arch-clean

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/pacman/: README.md  getAllPackages.sh  getPackageDependencies.sh  getPackageInfo.sh  getPackageReverseDeps.sh  testData.sh
src/: icon.rs  main.rs  package.rs  ui.rs
